<resources>
    <string name="app_name">Yukkti</string>
    <string name="appDescription">Expect the best !!</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="you_have_not_ordered_any_thing_yet_n_please_place_your_first_order">You Have Not Ordered Any Thing Yet \n Please Place Your First Order</string>
    <string name="title_activity_register">register</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_profile">profile</string>
    <string name="enter_more_details">Enter More Details</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="update_details">Update Details</string>
    <string name="next">next</string>

    <string name="open_drawer">open drawer menu</string>
    <string name="close_drawer">close drawer menu</string>
    <string name="grocery_corner">grocery corner</string>
    <string name="friuts_vegetables">fruits and vegetables</string>
    <string name="catogaries">Categories</string>
    <string name="cat_menu_search">search</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="submit">submit</string>
    <string name="title_activity_order__history">Order_History</string>
    <string name="tab_text_1">Current Order</string>
    <string name="tab_text_2">Old Orders</string>
    <string name="title_activity_old__order__details">Old_Order_Details</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>