<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    >
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_more_details"
        android:textSize="35sp"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/userId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_centerHorizontal="true"
        />

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_below="@id/text"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="17dp"
        android:src="@drawable/profile" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_full_name"
        android:layout_below="@id/image_profile"
        android:autofillHints="" />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_email"
        android:layout_below="@id/name"
        android:autofillHints="" />

    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_phone_number"
        android:layout_below="@id/email"/>
    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_address"
        android:layout_below="@id/number"/>
    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_details"
        android:padding="5dp"
        android:layout_marginTop="25dp"
        android:layout_below="@id/address"
        android:layout_centerHorizontal="true"
        android:background="#b2b2b2"
        />

</RelativeLayout>
